--- a/css/styles.css
+++ b/css/styles.css
@@ -87,3 +87,45 @@ header{
     align-items: center;
     padding: 0 1rem;
 }
+
+/* Projects section */
+#projects{
+    padding-top: 2rem;
+    background-color: var(--main-blue);
+    display: flex;
+    flex-direction: column;
+}
+.project-section-title{
+    margin-bottom: 3rem;
+}
+
+#projects-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 1rem;
+    width: 80%;
+    margin: 0 auto;
+}
+.project-title{
+    background-color: var(--main-gray);
+}
+.project-container img{
+    height: calc(100% - 6.8rem)
+}
+.project-title{
+    padding: 0.5rem;
+}
+.btn{
+    font-size: 2rem;
+    background-color: var(--main-gray);
+    color: var(--main-white);
+    border: none;
+    padding: 0.75rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    align-self: center;
+    margin-bottom: 2rem;
+}
+.btn::after{
+    margin-left: 1rem;
+    content: ">";
+}
